--- a/style.css
+++ b/style.css
@@ -3,23 +3,12 @@ html, body{
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  background-color: #446CB3;
 }
 
 header{
   margin: 0;
   padding: 0;
-}
-
-header img{
-  position: relative;
-  height: 100vh;
-  width: 100%;
-  opacity: 0.9;
-  z-index: -999999;
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
-  -webkit-filter: brightness(30%);
-          filter: brightness(30%);
 }
 
 .text{
